@@ -16,25 +16,25 @@ jobs:
         include:
           # WooCommerce
           - woocommerce_support_policy: L
-            woocommerce: '7.7.0'
+            woocommerce: '7.8.0'
           - woocommerce_support_policy: L-1
-            woocommerce: '7.6.1'
+            woocommerce: '7.7.0'
           - woocommerce_support_policy: L-2
-            woocommerce: '7.5.1'
+            woocommerce: '7.6.1'
           # WordPress
           - wordpress_support_policy: L
-            wordpress: '6.2'
+            wordpress: '6.5'
           - wordpress_support_policy: L-1
-            wordpress: '6.1'
+            wordpress: '6.4'
           - wordpress_support_policy: L-2
-            wordpress: '6.0'
+            wordpress: '6.3'
           # PHP
           - php_support_policy: L
-            php: '8.0'
+            php: '8.1'
           - php_support_policy: L-1
-            php: '7.4'
+            php: '8.0'
           - php_support_policy: L-2
-            php: '7.3'
+            php: '7.4'
 
     name: Stable (PHP=${{ matrix.php_support_policy }}, WP=${{ matrix.wordpress_support_policy }}, WC=${{ matrix.woocommerce_support_policy }})
     env:
